fix align of magnet-link

--- a/src/app/main/main.component.scss
+++ b/src/app/main/main.component.scss
@@ -17,8 +17,12 @@
         }
       }
 
-      img {
-        max-width: 34px;
+      .magnet-link {
+        float: right;
+
+        img {
+          max-width: 34px;
+        }
       }
     }
 
